package YouVideo;

public interface Author {
    String getAuthor();
    boolean equals(Object other);
}
