package YouVideo;

public interface Show {
    String getTitle();

    String getDate();

    String getAuthor();
}
